--- a/client/src/components/card/card.module.css
+++ b/client/src/components/card/card.module.css
@@ -1,46 +1,93 @@
-/* card.module.css */
+.cardContainer,
+.cardContainer * {
+  box-sizing: border-box;
 
-.cardN {
-    width: 250px;
-    margin: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    overflow: hidden;
-    transition: transform 0.2s ease-in-out;
-  }
-  
-  .cardN:hover {
-    transform: scale(1.05);
-  }
-  
-  .card-img {
-    position: relative;
-    overflow: hidden;
-  }
-  
-  .card-img img {
-    width: 100%;
-    height: auto;
-    display: block;
-  }
-  
-  .cardInfo {
-    padding: 10px;
-  }
-  
-  .cardInfo h3 {
-    margin: 0;
-  }
-  
-  .cardInfo p {
-    margin: 5px 0;
-    font-size: 14px;
-    color: #666;
-  }
-  
-  /* Estilo para el enlace (Link) dentro de la tarjeta */
-  .cardN a {
-    color: inherit;
-    text-decoration: none;
-  }
-  
+}
+.cardContainer {
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+  align-items: center;
+  justify-content: flex-end;
+  width: 400px;
+  position: relative;
+  overflow: hidden;
+  transform: scale(0.7);
+  border: 3px solid  #a00202 ;
+}
+.fondoProfile{
+  display: flex;
+  background-color: #ffffff;
+  width: 400px;
+  align-items: center;
+  justify-content: center;
+}
+.profillepicture {
+  flex-shrink: 0;
+  width: auto;
+  height: 400px;
+  position: center;
+  overflow: hidden;
+}
+.cardinfo {
+  background: #ffffff;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 26px;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-shrink: 0;
+  width: 400px;
+  position: relative;
+}
+.nombre {
+  color: #000000;
+  text-align: left;
+  font: 700 18px "Inter", sans-serif;
+  position: relative;
+}
+.cardname {
+  color: #000000;
+  text-align: center;
+  font: 700 24px "Inter", sans-serif;
+  position: relative;
+  align-self: stretch;
+}
+.escuderia {
+  color: #000000;
+  text-align: left;
+  font: 700 18px "Inter", sans-serif;
+  position: relative;
+}
+.cardteams {
+  color: #000000;
+  text-align: center;
+  font: 400 16px "Inter", sans-serif;
+  position: relative;
+  align-self: stretch;
+}
+.button {
+
+  background:  #a00202;
+  border-radius: 10px;
+  padding: 20px 10px 20px 10px;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  align-self: stretch;
+  flex-shrink: 0;
+  height: 52px;
+  width: 350px;
+  position: relative;
+  box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.25);
+}
+.vermas {
+  color: #f5f5f5;
+  text-align: center;
+  font: 700 14px "Inter", sans-serif;
+  position: relative;
+}
