--- a/client/src/components/NavBar/style.css
+++ b/client/src/components/NavBar/style.css
@@ -5,7 +5,6 @@
   box-sizing: border-box;
 }
 
-
 .nav-bar {
   background: linear-gradient(
     182.69deg,
@@ -16,46 +15,49 @@
   border-color: #a00202;
   border-width: 2px;
   padding: 14px 31px 14px 31px;
-  width: 1349px;
+  width: 100%; /* Cambiado a 100% para cubrir toda la parte superior */
   height: 80px;
-  position: relative;
+  position: fixed; /* Cambiado a fixed para que permanezca fijo en la parte superior */
+  top: 0; /* Alineado en la parte superior */
+  left: 0; /* Alineado a la izquierda */
+  z-index: 1000; /* Asegura que esté por encima de otros elementos */
   overflow: hidden;
 }
+
 .frame-1 {
   display: flex;
   flex-direction: row;
-  gap: 75px;
+  gap: 20px; /* Espacio uniforme entre los elementos */
   align-items: center;
-  justify-content: flex-start;
-  position: absolute;
-  left: 31px;
-  top: 14px;
+  justify-content: space-between; /* Distribución equitativa de los elementos */
+  width: calc(100% - 62px); /* Espacio restante después de padding */
+  margin: 0 auto; /* Centrado horizontal */
 }
+
 .logo {
   flex-shrink: 0;
-  width: 120px;
-  height: 30px;
-  position: relative;
 }
+
 .logo-f-1 {
   width: 120px;
   height: 30px;
-  position: absolute;
-  left: 0px;
-  top: 0px;
   box-shadow: 10px 10px 12px 0px rgba(0, 0, 0, 0.4);
 }
+
+
 .home-button {
     width: 210px;
     height: 36px;
     position: relative;
     overflow: hidden;
-  }
-  .homebutt {
+}
+
+.homebutt {
     position: absolute;
     inset: 0;
-  }
-  .home-button-box {
+}
+
+.home-button-box {
     background: #c6c6c6;
     border-radius: 6px;
     width: 113px;
@@ -64,15 +66,17 @@
     left: 47px;
     top: 6px;
     box-shadow:  0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  }
-  .home-icon {
+}
+
+.home-icon {
     width: 22px;
     height: 22px;
     position: absolute;
     left: 53px;
     top: 9px;
-  }
-  .home-label {
+}
+
+.home-label {
     color: #000000;
     text-align: left;
     font: 400 27px "Racing Sans One", sans-serif;
@@ -84,20 +88,22 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
-  }
-  
-  .new-driver-button {
+}
+
+.new-driver-button {
     flex-shrink: 0;
     width: 270px;
     height: 36px;
     position: relative;
     overflow: hidden;
-  }
-  .formbutt {
+}
+
+.formbutt {
     position: absolute;
     inset: 0;
-  }
-  .new-driver-box {
+}
+
+.new-driver-box {
     background: #c6c6c6;
     border-radius: 6px;
     width: 253px;
@@ -106,15 +112,17 @@
     left: 7px;
     top: 6px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  }
-  .form-icon {
+}
+
+.form-icon {
     width: 22px;
     height: 22px;
     position: absolute;
     left: 11px;
     top: 10px;
-  }
-  .new-driver-label {
+}
+
+.new-driver-label {
     color: #000000;
     text-align: left;
     font: 400 27px "Racing Sans One", sans-serif;
@@ -126,8 +134,8 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
-  }
-  
+}
+
 .search-input {
     flex-shrink: 0;
     width: 334px;
@@ -147,6 +155,7 @@
     border-radius: 15px;
     background-color: black
 }
+
 .search-input-box {
   background: #1e1e1e;
   border-radius: 10px;
@@ -159,13 +168,14 @@
   right: 0px;
   top: 0px;
 }
-.divisor {
 
+.divisor {
   left: 302px;
   top: 1px;
   overflow: visible;
   grid-area: 1 / 2 / 2 / 3;
 }
+
 .search-image-coontainer {
   width: 37px;
   height: 38px;
@@ -175,6 +185,7 @@
   overflow: hidden;
   grid-area: 1 / 3 / 2 / 4;
 }
+
 .search-img {
   width: 37px;
   height: 38px;
@@ -183,6 +194,7 @@
   top: 0px;
   filter: invert(100%);
 }
+
 .input-search {
   color: #ffffff;
   text-align: left;
